--- a/ZammansGadget/backend/.env
+++ b/ZammansGadget/backend/.env
@@ -1,6 +1,6 @@
 JWT_SECRET = "greatstack"
-ADMIN_EMAIL = "zammansgadget@gmail.com"
-ADMIN_PASSWORD = "zammansgadget"
+ADMIN_EMAIL = "zamansgadget@gmail.com"
+ADMIN_PASSWORD = "R@hin.05508622"
 
 MONGODB_URI = "mongodb+srv://mdshoaibwebstack:OBotZC39o1u4Zy2s@cluster0.czaerso.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
