--- a/ZammansGadget/backend/vercel.json
+++ b/ZammansGadget/backend/vercel.json
@@ -19,6 +19,26 @@
 //     ]
 // }
 
+// {
+//   "version": 2,
+//   "builds": [
+//     {
+//       "src": "server.js",
+//       "use": "@vercel/node",
+//       "config": {
+//         "includeFiles": [
+//           "dist/**"
+//         ]
+//       }
+//     }
+//   ],
+//   "routes": [
+//     {
+//       "src": "/(.*)",
+//       "dest": "server.js"
+//     }
+//   ]
+// }
 {
   "version": 2,
   "builds": [
@@ -27,7 +47,7 @@
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
-          "dist/**"
+          "ZammansGadget/frontend/dist/**"
         ]
       }
     }
