--- a/ZammansGadget/backend/vercel.json
+++ b/ZammansGadget/backend/vercel.json
@@ -39,6 +39,7 @@
 //     }
 //   ]
 // }
+// 
 {
   "version": 2,
   "builds": [
@@ -53,6 +54,9 @@
     }
   ],
   "routes": [
+    {
+      "handle": "filesystem"
+    },
     {
       "src": "/(.*)",
       "dest": "server.js"
