Updated vercel config and ensured frontend build

--- a/ZammansGadget/backend/vercel.json
+++ b/ZammansGadget/backend/vercel.json
@@ -89,15 +89,39 @@
 //   ]
 // }
 
+// {
+//   "version": 2,
+//   "builds": [
+//     {
+//       "src": "server.js",
+//       "use": "@vercel/node",
+//       "config": {
+//         "includeFiles": [
+//           "frontend/dist/**"
+//         ]
+//       }
+//     }
+//   ],
+//   "routes": [
+//     {
+//       "handle": "filesystem"
+//     },
+//     {
+//       "src": "/(.*)",
+//       "dest": "server.js"
+//     }
+//   ]
+// }
+
 {
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "ZammansGadget/backend/server.js",
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
-          "frontend/dist/**"
+          "ZammansGadget/frontend/dist/**"
         ]
       }
     }
@@ -108,7 +132,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "ZammansGadget/backend/server.js"
     }
   ]
 }
