Final fix for Vercel 404 SPA refresh issue

--- a/ZammansGadget/backend/vercel.json
+++ b/ZammansGadget/backend/vercel.json
@@ -113,6 +113,30 @@
 //   ]
 // }
 
+// {
+//   "version": 2,
+//   "builds": [
+//     {
+//       "src": "ZammansGadget/backend/server.js",
+//       "use": "@vercel/node",
+//       "config": {
+//         "includeFiles": [
+//           "ZammansGadget/frontend/dist/**"
+//         ]
+//       }
+//     }
+//   ],
+//   "routes": [
+//     {
+//       "handle": "filesystem"
+//     },
+//     {
+//       "src": "/(.*)",
+//       "dest": "ZammansGadget/backend/server.js"
+//     }
+//   ]
+// }
+
 {
   "version": 2,
   "builds": [
@@ -121,7 +145,10 @@
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
-          "ZammansGadget/frontend/dist/**"
+          "ZammansGadget/frontend/dist/**",
+          "ZammansGadget/config/**",  // if .env or config files needed
+          "ZammansGadget/backend/config/**",
+          "ZammansGadget/backend/routes/**"
         ]
       }
     }
