Alhamdulliah some  changes

--- a/ZammansGadget/backend/vercel.json
+++ b/ZammansGadget/backend/vercel.json
@@ -137,6 +137,33 @@
 //   ]
 // }
 
+// {
+//   "version": 2,
+//   "builds": [
+//     {
+//       "src": "ZammansGadget/backend/server.js",
+//       "use": "@vercel/node",
+//       "config": {
+//         "includeFiles": [
+//           "ZammansGadget/frontend/dist/**",
+//           "ZammansGadget/config/**",  // if .env or config files needed
+//           "ZammansGadget/backend/config/**",
+//           "ZammansGadget/backend/routes/**"
+//         ]
+//       }
+//     }
+//   ],
+//   "routes": [
+//     {
+//       "handle": "filesystem"
+//     },
+//     {
+//       "src": "/(.*)",
+//       "dest": "ZammansGadget/backend/server.js"
+//     }
+//   ]
+// }
+
 {
   "version": 2,
   "builds": [
@@ -146,7 +173,6 @@
       "config": {
         "includeFiles": [
           "ZammansGadget/frontend/dist/**",
-          "ZammansGadget/config/**",  // if .env or config files needed
           "ZammansGadget/backend/config/**",
           "ZammansGadget/backend/routes/**"
         ]
