--- a/ZammansGadget/admin/.env
+++ b/ZammansGadget/admin/.env
@@ -1,2 +1,2 @@
-# VITE_BACKEND_URL = "http://localhost:4000"
-VITE_BACKEND_URL = "https://zamansgadgetshopbackend.vercel.app"
+VITE_BACKEND_URL = "http://localhost:4000"
+# VITE_BACKEND_URL = "https://zamansgadgetshopbackend.vercel.app"
